--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-"VITE_API_BASE_URL=http://localhost:3000/api" 
+cat > .env.example << 'EOF'
 # API Configuration
 VITE_API_BASE_URL=http://localhost:3000/api
 VITE_APP_NAME=My Sales System
@@ -11,3 +11,4 @@ VITE_ENABLE_PAYMENT=true
 # Third-party Services
 VITE_GOOGLE_ANALYTICS_ID=
 VITE_STRIPE_PUBLIC_KEY=
+EOF
