--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,5 @@
-"VITE_API_BASE_URL=http://localhost:3000/api" 
+cat > .env.dev << 'EOF'
+VITE_API_BASE_URL=http://localhost:3000/api
 VITE_DEBUG=true
+VITE_APP_NAME=My Sales System Dev
+EOF
